# cmake-example

./: CMakeLists.txt  LICENSE  README.md
include/: max_curvature.h
src/: main.cpp
tools/cmake/: modcam-cmake-example-config.cmake
